--- a/medicalRecord/src/main/res/values/styles.xml
+++ b/medicalRecord/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="expend_list_item">
+        <item name="android:layout_width" >match_parent</item>
+        <item name="android:layout_height" >wrap_content</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:gravity" >center_vertical</item>
+    </style>
+
 </resources>
